--- a/rpsbotchallenge.qmd
+++ b/rpsbotchallenge.qmd
@@ -13,14 +13,8 @@ This means that playing the *game theory optimal* strategy will not maximize you
 
 The challenge is to predict what they're doing, and in cases where there are house bots and human-made bots, the challenge is to play well against the house bots without getting counterplayed by the human-made ones. And perhaps to counterplay the human-made bots that are prioritizing counterplaying the house bots! 
 
-## Weekly Challenge
-Enter your best bot to play against that week's other human-made bot entrants as well as a selection of our own house bots that will vary each week. You'll play every other entrant for 1000 games.  
-
-Entries start each Monday and end each Sunday, with results posted the Monday after. **[Maybe: Some feedback mechanism to improve and resubmit throughout week, at least against house bots?]**
-
-![](matrix.png)
-
-Each week has a special rookie division for those who are entering for their first time. 
+## Rock Practice Gym
+Test your bot against a variety of our house bots in our Rock Practice Gym. 
 
 ## Daily Challenge
 Play 200 **[how many?]** games against a single RPS bot each day. 
@@ -30,6 +24,16 @@ The bots will get roughly more difficult as the week goes on from Monday to Sund
 You can play against the bot with your own bot, manually, or both. We have tools to help write your own bot even if you don't know how to code. 
 
 **[What about the timer play every second thing?]**
+**[Do daily ones also enter into the weekly?]**
+
+## Weekly Challenge
+Enter your best bot to play against that week's other human-made bot entrants as well as a selection of our own house bots that will vary each week. You'll play every other entrant for 1000 games.  
+
+Entries start each Monday and end each Sunday, with results posted the Monday after. **[Maybe: Some feedback mechanism to improve and resubmit throughout week, at least against house bots?]**
+
+![](matrix.png)
+
+Each week has a special rookie division for those who are entering for their first time. 
 
 ## Hackathon
 We periodically run virtual and in-person hackathons that we'll announce on RPS.bot and on our [mailing list](https://overbetai.substack.com/)/social channels.
