--- a/index.qmd
+++ b/index.qmd
@@ -7,4 +7,4 @@ format:
 ---
 RPS.bot is an intro to opponent modeling through the game Rock Paper Scissors. **Get started now** with [Intro to RPS](intro.qmd).
 
-![](s3ds.png)
+![](s3ds.png){width=50%}
