--- a/index.qmd
+++ b/index.qmd
@@ -7,6 +7,9 @@ format:
 ---
 RPS.bot is an intro to opponent modeling through the game Rock Paper Scissors. 
 
+RRPS allows the challenge to focus mainly on the tenuous balance between maximizing reward while not being exploitable
+
+
 **Get started now** with [Intro to RPS](intro.qmd).
 
 ![](s3ds.png){width=60%}
