--- a/intro.qmd
+++ b/intro.qmd
@@ -233,7 +233,7 @@ The random equilibrium strategy will result in 0 against any pure strategy and a
 ### Exploiting vs. Nash
 The equilibrium strategy vs. a pure Rock opponent is a useful illustration of the limitations of playing at equilibrium. The Rock opponent is playing perhaps the worst possible strategy, yet equilibrium is still breaking even against it! 
 
-What's the best that we could do against Rock only? We could play **purely paper**. This is called a **best response** strategy. The payoffs are written for playing Paper and the probabilities indicate the opponent playing only Rock. 
+What's the best that we could do against Rock only? We could play **purely paper**. This is called a **best response** strategy. Any deterministic strategy can be fully exploited. The payoffs are written for playing Paper and the probabilities indicate the opponent playing only Rock. 
 
 $$
 \begin{equation}
